--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,6 @@
 name: BoostPad
 main: BoxOfDevs\BPad\Main
 api:
-- 2.0.0
 - 3.0.0
 version: 1.0
-author: BoxOfDevs Team
+author: BoxOfDevs Team, Terpz710
